# APEX-AGI

./: .env.example  .gitignore  Dockerfile  README.md  deploy_singapore.sh  docker-compose.yml  fix_ci.ps1  requirements.txt  update_ci.ps1  workflow_check.yml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
examples/: basic_usage.rs
omega-agi/: .env.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  install.bat  install.sh
omega-agi/.devcontainer/: devcontainer.json
omega-agi/.github/workflows/: ci.yml
omega-agi/adapters/: Cargo.toml
omega-agi/adapters/src/: feishu_adapter.rs  hermes_adapter.rs  lib.rs  openclaw_adapter.rs  openhuman_adapter.rs
omega-agi/agent/: Cargo.toml
omega-agi/agent/src/: engines.rs  feedback.rs  inference.rs  knowledge.rs  lib.rs  llm.rs  memory.rs  orchestrator.rs  react.rs  tool.rs  tools.rs
omega-agi/avatar/: Cargo.toml
omega-agi/avatar/src/: character.rs  chat.rs  display.rs  lib.rs  tui.rs
omega-agi/engineering/: Cargo.toml
omega-agi/engineering/src/: code_generator.rs  lib.rs  pr_manager.rs  quality_gate.rs  test_runner.rs
omega-agi/evolution/: Cargo.toml
omega-agi/evolution/src/: apex_core.rs  auto_evolve.rs  lib.rs  self_evolve.rs
omega-agi/hypercore/: Cargo.toml
omega-agi/hypercore/src/: diagnostics.rs  errors.rs  health.rs  lib.rs  logging.rs  memory.rs  pipeline.rs  scheduler.rs  security.rs  self_heal.rs  session.rs
omega-agi/life_harness/: Cargo.toml
omega-agi/life_harness/src/: heartbeat.rs  lib.rs  persistence.rs  recovery.rs  resources.rs
omega-agi/research/: Cargo.toml
omega-agi/research/src/: extractor.rs  knowledge.rs  lib.rs  reporter.rs  searcher.rs
omega-agi/runtime/: Cargo.toml
omega-agi/runtime/src/: actor.rs  effect.rs  graph_executor.rs  lib.rs  ml_inference.rs  wasm_sandbox.rs
omega-agi/runtime/src/swarm/: agent_coordinator.rs  consensus.rs  crdt.rs  health_monitor.rs  mod.rs
omega-agi/scripts/: entrypoint.sh
omega-agi/src/: lib.rs  main.rs
omega-agi/superpowers/: Cargo.toml
omega-agi/superpowers/src/: analyzer.rs  boost.rs  lib.rs  optimizer.rs  self_heal.rs
omega-agi/transcendence/: Cargo.toml
omega-agi/transcendence/src/: lib.rs
omega_pipeline/: feishu_client.py  self_healing.py
tests/: test_integration.py
web_ui/: config_manager.py
