[package]
name = "omega-agi"
version = "0.1.0"
edition = "2021"

[dependencies]
omega-hypercore = { path = "hypercore" }
omega-runtime = { path = "runtime" }
omega-engineering = { path = "engineering" }
omega-evolution = { path = "evolution" }
omega-adapters = { path = "adapters" }
omega-agent = { path = "agent" }
omega-research = { path = "research" }
omega-life-harness = { path = "life_harness" }
omega-superpowers = { path = "superpowers" }
omega-avatar = { path = "avatar" }
omega-transcendence = { path = "transcendence", optional = true }
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
async-trait = "0.1"
ctrlc = "3.4"
parking_lot = "0.12"
chrono = "0.4"

[workspace]
members = ["hypercore", "runtime", "engineering", "evolution", "adapters", "agent", "research", "life_harness", "superpowers", "avatar", "transcendence"]

[features]
default = ["full"]
full = ["omega-transcendence"]
