[package]
name = "omega-avatar"
version = "0.1.0"
edition = "2021"
description = "Layer 9 - Avatar: local human-like AI avatar with terminal UI, character personalities, and chat interface"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.35", features = ["sync", "time", "io-util", "rt"] }
