[package]
name = "omega-engineering"
version = "0.1.0"
edition = "2021"
description = "Layer 2 - Code generation, test harness, quality gates, PR automation"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.35", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
