[package]
name = "omega-evolution"
version = "0.1.0"
edition = "2021"
description = "Layer 3 - Self-evolution engine with competitive analysis and cross-project learning"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.35", features = ["sync"] }
parking_lot = "0.12"
