[package]
name = "omega-hypercore"
version = "0.1.0"
edition = "2021"
description = "Layer 0 - Zero-allocation async runtime with persistent memory and capability security"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
dashmap = "5"
memmap2 = "0.9"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
