[package]
name = "omega-life-harness"
version = "0.1.0"
edition = "2021"
description = "Layer 7 - Life-Harness: system self-maintenance, heartbeat monitoring, auto-recovery, and resource management"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.35", features = ["sync", "time", "process"] }
sysinfo = "0.32"
notify = "6"
