[package]
name = "omega-research"
version = "0.1.0"
edition = "2021"
description = "Layer 6 - Autoresearch: autonomous web research, content extraction, report generation, and knowledge graph"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.35", features = ["sync", "time"] }
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
