[package]
name = "omega-runtime"
version = "0.1.0"
edition = "2021"
description = "Layer 1 - Actor system, WASM sandbox, effect system, ML inference, graph executor"

[dependencies]
omega-hypercore = { path = "../hypercore" }
tokio = { version = "1.35", features = ["full", "parking_lot", "sync"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
parking_lot = "0.12"
dashmap = "5.5"
async-trait = "0.1"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
