[package]
name = "omega-superpowers"
version = "0.1.0"
edition = "2021"
description = "Layer 8 - Superpowers: auto-optimization, performance boost, self-healing, and system analysis"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.35", features = ["sync", "time"] }
