[package]
name = "omega-transcendence"
version = "0.1.0"
edition = "2021"
description = "Layer 10 - Ultimate Transcendence: self-aware AGI layer with meta-cognition, emergent capability discovery, and quantum-inspired state optimization"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.35", features = ["sync", "time"] }
omega-hypercore = { path = "../hypercore" }
omega-evolution = { path = "../evolution" }
